-Revisi (-Career Page)

--- a/about-us.html
+++ b/about-us.html
@@ -56,12 +56,12 @@
       <img
         src="/src/assets/icons/cursor1.svg"
         alt="cursor"
-        class="absolute top-[47%] left-[47%]"
+        class="absolute top-[47%] left-[47%] w-8/12"
       />
     </div>
     <div
       id="cursor2"
-      class="hidden xl:block fixed w-[28px] h-[28px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
+      class="hidden xl:block fixed w-[20px] h-[20px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
     >
       <img
         src="/src/assets/icons/cursor2.svg"
@@ -140,7 +140,7 @@
                 <a
                   href="/expertise.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
-                  >Expertise</a
+                  >Service</a
                 >
               </li>
               <li>
@@ -152,7 +152,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="/career.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
                   >Career</a
                 >
@@ -173,7 +173,7 @@
             class="content relative flex items-start justify-center w-full min-h-[100vh] overflow-visible"
           >
             <div
-              class="container flex flex-col items-center justify-center w-full pt-4 relative"
+              class="container relative flex flex-col items-center justify-center w-full pt-4"
             >
               <div
                 class="absolute w-[300px] h-[300px] xl:w-[600px] 2xl:w-[1000px] 2xl:h-[1000px] xl:h-[600px] bg-blue-800 z-[-1] top-[0%] left-[0%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[180px] opacity-[1]"
@@ -207,7 +207,7 @@
                   <img
                     src="src/assets/images/about.png"
                     alt="background"
-                    class="w-full hero-bg-img-main object-cover object-center"
+                    class="object-cover object-center w-full hero-bg-img-main"
                   />
                 </div>
               </div>
@@ -271,7 +271,7 @@
     <div
       class="w-full lg:max-w-[1150px] 2xl:max-w-[1366px] mx-auto px-5 xl:px-28 2xl:px-28 mb-56 2xl:mb-96 main-content"
     >
-      <div class="mb-24 max-md:mb-12 w-full">
+      <div class="w-full mb-24 max-md:mb-12">
         <h1
           class="p-0 text-center max-md:text-left text-6xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] max-md:text-4xl font-outfit font-semibold mb-3"
         >
@@ -554,15 +554,15 @@
           <h1
             class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
-            Evolve
+            Measurable Results
           </h1>
         </div>
         <div class="w-full xl:w-[55%] flex items-center">
           <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
-            Just like people, a brand needs to breathe, grow, and
-            evolve. We will make decision based on relevant data,
-            establish your presence then let`s celebrate your
-            milestone and evolve!
+            We take pride in delivering tangible results. Our data-driven 
+            approach and analytics capabilities allow us to track the 
+            performance of our branding efforts, providing you with real-time 
+            insights into the effectiveness of our strategies
           </p>
         </div>
       </div>
@@ -580,34 +580,35 @@
 
     <!-- Sticky contact us -->
     <div
-      class="w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-80px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative overflow-hidden flex items-start">
-        <div
+      <div class="relative flex items-start overflow-hidden">
+        <a href="/about-you.html">
+          <div
           class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
         >
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
@@ -616,31 +617,32 @@
           class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
         >
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
         </div>
+        </a>
       </div>
     </div>
 
@@ -665,7 +667,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
           </h4>
         </div>
         <div
