--- a/about-you.html
+++ b/about-you.html
@@ -31,6 +31,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/kursor/dist/kursor.css"
@@ -48,12 +55,12 @@
       <img
         src="/src/assets/icons/cursor1.svg"
         alt="cursor"
-        class="absolute top-[47%] left-[47%]"
+        class="absolute top-[47%] left-[47%] w-8/12"
       />
     </div>
     <div
       id="cursor2"
-      class="hidden xl:block fixed w-[28px] h-[28px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
+      class="hidden xl:block fixed w-[20px] h-[20px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
     >
       <img
         src="/src/assets/icons/cursor2.svg"
@@ -141,7 +148,7 @@
                 <a
                   href="/expertise.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white md:border-0 md:p-0 cursor-none md:bg-transparent"
-                  >Expertise</a
+                  >Service</a
                 >
               </li>
               <li>
@@ -153,7 +160,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="/career.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
                   >Career</a
                 >
@@ -392,7 +399,7 @@
     <div
       class="w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative overflow-hidden flex items-start">
+      <div class="relative flex items-start overflow-hidden">
         <div
           class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
         >
@@ -475,7 +482,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            +62 812 3456789
+          <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
           </h4>
         </div>
         <div
