--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
       rel="stylesheet"
     />
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
     <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/kursor/dist/kursor.css"
@@ -48,12 +54,12 @@
       <img
         src="/src/assets/icons/cursor1.svg"
         alt="cursor"
-        class="absolute top-[47%] left-[47%]"
+        class="absolute top-[47%] left-[47%] w-8/12"
       />
     </div>
     <div
       id="cursor2"
-      class="hidden xl:block fixed w-[28px] h-[28px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
+      class="hidden xl:block fixed w-[20px] h-[20px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
     >
       <img
         src="/src/assets/icons/cursor2.svg"
@@ -137,7 +143,7 @@
                 <a
                   href="/expertise.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
-                  >Expertise</a
+                  >Service</a
                 >
               </li>
               <li>
@@ -149,7 +155,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="/career.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
                   >Career</a
                 >
@@ -426,15 +432,15 @@
           <h1
             class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
-            Evolve
+            Measurable Results
           </h1>
         </div>
         <div class="w-full xl:w-[55%] flex items-center">
           <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
-            Just like people, a brand needs to breathe, grow, and
-            evolve. We will make decision based on relevant data,
-            establish your presence then let`s celebrate your
-            milestone and evolve!
+            We take pride in delivering tangible results. Our data-driven 
+            approach and analytics capabilities allow us to track the 
+            performance of our branding efforts, providing you with real-time 
+            insights into the effectiveness of our strategies
           </p>
         </div>
       </div>
@@ -511,68 +517,70 @@
 
     <!-- Sticky contact us -->
     <div
-      class="w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-80px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative overflow-hidden flex items-start">
+    <div class="relative flex items-start overflow-hidden">
+      <a href="about-you.html">
         <div
-          class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
+        class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
+      >
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
         >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-        </div>
-        <div
-          class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
         >
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-          <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
-          >
-            Contact Us
-          </p>
-        </div>
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
       </div>
+      <div
+        class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
+      >
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
+        <p
+          class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
+        >
+          Contact Us
+        </p>
+      </div>
+      </a>
+    </div>
     </div>
 
     <!-- Footer goes here -->
@@ -596,7 +604,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
           </h4>
         </div>
         <div
