--- a/insight.html
+++ b/insight.html
@@ -31,6 +31,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
       rel="stylesheet"
     />
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
     <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/kursor/dist/kursor.css"
@@ -48,12 +54,12 @@
       <img
         src="/src/assets/icons/cursor1.svg"
         alt="cursor"
-        class="absolute top-[47%] left-[47%]"
+        class="absolute top-[47%] left-[47%] w-8/12"
       />
     </div>
     <div
       id="cursor2"
-      class="hidden xl:block fixed w-[28px] h-[28px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
+      class="hidden xl:block fixed w-[20px] h-[20px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
     >
       <img
         src="/src/assets/icons/cursor2.svg"
@@ -62,7 +68,7 @@
       />
     </div>
 
-    <div class="w-full relative">
+    <div class="relative w-full">
       <div
         class="absolute w-[250px] h-[250px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-800 z-[-1] top-[5%] xl:top-[8%] left-[0%] xl:left-[5%] -translate-x-[0%] -translate-y-[50%] rounded-full blur-[64px] xl:blur-[186px] opacity-[1] animate-pulse rellax"
         data-rellax-xs-speed="3"
@@ -81,7 +87,7 @@
         id="backbone"
       ></div>
       <nav
-        class="w-full top-0 left-0 z-20 relative transition duration-500 ease-in-out"
+        class="relative top-0 left-0 z-20 w-full transition duration-500 ease-in-out"
         id="navbar"
       >
         <div
@@ -122,7 +128,7 @@
             id="navbar-default"
           >
             <ul
-              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase md:p-0 bg-transparent md:flex-row md:space-x-8 md:mt-0 md:border-0"
+              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase bg-transparent md:p-0 md:flex-row md:space-x-8 md:mt-0 md:border-0"
             >
               <li>
                 <a
@@ -143,8 +149,8 @@
               <li>
                 <a
                   href="/expertise.html"
-                  class="block py-2 pl-3 pr-4 text-white md:border-0 md:p-0 font-normal cursor-none md:bg-transparent"
-                  >Expertise</a
+                  class="block py-2 pl-3 pr-4 font-normal text-white md:border-0 md:p-0 cursor-none md:bg-transparent"
+                  >Service</a
                 >
               </li>
               <li>
@@ -156,7 +162,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="/career.html"
                   class="block py-2 pl-3 pr-4 font-normal text-white rounded md:border-0 md:p-0 cursor-none"
                   >Career</a
                 >
@@ -180,7 +186,7 @@
                 Insight :
               </h1>
               <h2
-                class="mt-2 text-4xl font-inter font-medium leading-8 text-slate-200 head2"
+                class="mt-2 text-4xl font-medium leading-8 font-inter text-slate-200 head2"
               >
                 up-to-date news, technology, resources, etc.
               </h2>
@@ -191,7 +197,7 @@
               class="content-tabs border-t border-[#47ABD8] mt-10 mb-0 xl:my-10 py-3 pl-[2px]"
             >
               <ul
-                class="flex flex-wrap gap-3 xl:gap-5 p-0 mt-0 text-2xl font-base"
+                class="flex flex-wrap gap-3 p-0 mt-0 text-2xl xl:gap-5 font-base"
                 id="myTab"
                 data-tabs-toggle="#myTabContent"
                 role="tablist"
@@ -260,10 +266,10 @@
             </div>
 
             <!-- main content -->
-            <div id="myTabContent" class="main-content w-full">
+            <div id="myTabContent" class="w-full main-content">
               <!-- view all -->
               <div id="all" role="tabpanel" aria-labelledby="all-tab">
-                <div class="w-full px-10 hidden xl:block">
+                <div class="hidden w-full px-10 xl:block">
                   <div class="grid grid-cols-2 gap-8">
                     <div
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/web.png')] bg-cover bg-center"
@@ -310,7 +316,7 @@
                 </div>
 
                 <div
-                  class="grid grid-cols-1 pt-7 mx-auto mt-0 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
+                  class="grid grid-cols-1 mx-auto mt-0 pt-7 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
                 >
                   <article
                     class="flex flex-col items-start justify-between max-w-xl"
@@ -497,7 +503,7 @@
                 role="tabpanel"
                 aria-labelledby="design-tab"
               >
-                <div class="w-full px-10 hidden xl:block">
+                <div class="hidden w-full px-10 xl:block">
                   <div class="grid grid-cols-2 gap-8">
                     <div
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/design.png')] bg-cover bg-center"
@@ -544,7 +550,7 @@
                 </div>
 
                 <div
-                  class="grid grid-cols-1 pt-7 mx-auto mt-0 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
+                  class="grid grid-cols-1 mx-auto mt-0 pt-7 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
                 >
                   <article
                     class="flex flex-col items-start justify-between max-w-xl"
@@ -598,7 +604,7 @@
                 role="tabpanel"
                 aria-labelledby="product-tab"
               >
-                <div class="w-full px-10 hidden xl:block">
+                <div class="hidden w-full px-10 xl:block">
                   <div class="grid grid-cols-2 gap-8">
                     <div
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/product.jpeg')] bg-cover bg-center"
@@ -645,7 +651,7 @@
                 </div>
 
                 <div
-                  class="grid grid-cols-1 pt-7 mx-auto mt-0 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
+                  class="grid grid-cols-1 mx-auto mt-0 pt-7 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
                 >
                   <article
                     class="flex flex-col items-start justify-between max-w-xl"
@@ -699,7 +705,7 @@
                 role="tabpanel"
                 aria-labelledby="website-tab"
               >
-                <div class="w-full px-10 hidden xl:block">
+                <div class="hidden w-full px-10 xl:block">
                   <div class="grid grid-cols-2 gap-8">
                     <div
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/web.png')] bg-cover bg-center"
@@ -746,7 +752,7 @@
                 </div>
 
                 <div
-                  class="grid grid-cols-1 pt-7 mx-auto mt-0 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
+                  class="grid grid-cols-1 mx-auto mt-0 pt-7 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
                 >
                   <article
                     class="flex flex-col items-start justify-between max-w-xl"
@@ -800,7 +806,7 @@
                 role="tabpanel"
                 aria-labelledby="marketing-tab"
               >
-                <div class="w-full px-10 hidden xl:block">
+                <div class="hidden w-full px-10 xl:block">
                   <div class="grid grid-cols-2 gap-8">
                     <div
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/dm.png')] bg-cover bg-center"
@@ -847,7 +853,7 @@
                 </div>
 
                 <div
-                  class="grid grid-cols-1 pt-7 mx-auto mt-0 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
+                  class="grid grid-cols-1 mx-auto mt-0 pt-7 gap-x-8 gap-y-16 xl:pt-16 sm:grid-cols-2 lg:grid-cols-3"
                 >
                   <article
                     class="flex flex-col items-start justify-between max-w-xl"
@@ -951,34 +957,35 @@
 
     <!-- Sticky contact us -->
     <div
-      class="w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
+      class="max-md:h-4 max-md:right-[-80px] max-md:w-[175px] w-[200px] h-14 fixed bottom-[45%] translate-y-[-50%] right-[-72px] bg-[#00B0FF] py-5 rotate-[-90deg] flex items-center"
     >
-      <div class="relative overflow-hidden flex items-start">
-        <div
+      <div class="relative flex items-start overflow-hidden">
+        <a href="/about-you.html">
+          <div
           class="z-0 animate-marquee whitespace-nowrap flex gap-[36px]"
         >
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
@@ -987,31 +994,32 @@
           class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap overflow-hidden flex gap-[36px]"
         >
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
           <p
-            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw]"
+            class="uppercase font-inter font-bold text-white text-lg xl:text-[1.5vw] tracking-wider"
           >
             Contact Us
           </p>
         </div>
+        </a>
       </div>
     </div>
 
@@ -1036,7 +1044,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
           </h4>
         </div>
         <div
